[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/fonts/font_pc_text.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/btn_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/prop_idle_2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/prop_idle_4.png" type="Texture" id=4]
[ext_resource path="res://assets/images/bat_1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/prop_idle_3.png" type="Texture" id=6]
[ext_resource path="res://scripts/Main.gd" type="Script" id=7]
[ext_resource path="res://assets/images/prop_idle_1.png" type="Texture" id=8]
[ext_resource path="res://assets/images/bat_3.png" type="Texture" id=9]
[ext_resource path="res://assets/images/bat_4.png" type="Texture" id=10]
[ext_resource path="res://assets/images/bat_5.png" type="Texture" id=11]
[ext_resource path="res://assets/images/ship_max_idle_1.png" type="Texture" id=12]
[ext_resource path="res://assets/images/bat_6.png" type="Texture" id=13]
[ext_resource path="res://assets/images/ship_max_right_1.png" type="Texture" id=14]
[ext_resource path="res://assets/images/bat_2.png" type="Texture" id=15]
[ext_resource path="res://assets/images/ship_max_left_1.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.141176, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.12549, 0.0901961, 0.0901961, 1 )

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 2.0
margin_right = 1.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "BUILDERS HATE ALIENS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
margin_top = 34.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "the new threat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = 1.0
margin_right = 57.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1Player" type="Button" parent="Menu/VBoxContainer"]
margin_right = 115.0
margin_bottom = 18.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "1 Player"
flat = true

[node name="2Player" type="Button" parent="Menu/VBoxContainer"]
margin_top = 22.0
margin_right = 115.0
margin_bottom = 40.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "2 Players"
flat = true

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
margin_top = 44.0
margin_right = 115.0
margin_bottom = 62.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Options"
flat = true

[node name="Exit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 66.0
margin_right = 115.0
margin_bottom = 84.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Exit"
flat = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 157.975, 69.9192 )
frames = SubResource( 3 )
frame = 3
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="AnimatedSprite"]
position = Vector2( 0, 13 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="AnimatedSprite"]
position = Vector2( -0.396851, 6.52441 )
frames = SubResource( 5 )
frame = 3
playing = true

[node name="MisionSelect" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 59.0
margin_top = 13.0
margin_right = -59.0
margin_bottom = -11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MisionSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.52549, 0.517647, 0.517647, 1 )

[node name="Mission" type="Button" parent="MisionSelect"]
margin_left = 48.0
margin_top = 12.973
margin_right = 150.0
margin_bottom = 24.973
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "mission"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Survival" type="Button" parent="MisionSelect"]
margin_left = 48.0
margin_top = 64.0
margin_right = 150.0
margin_bottom = 76.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
text = "survival"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Survival2" type="Button" parent="MisionSelect"]
margin_left = 48.0
margin_top = 118.0
margin_right = 150.0
margin_bottom = 130.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
text = "Time is up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MisionSelect"]
margin_left = 8.0
margin_top = 27.0
margin_right = 193.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 9 )
text = "Get all the concentrated air bubbles 
that you can to save your planet from
desertification."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MisionSelect"]
margin_left = 8.0
margin_top = 82.0
margin_right = 190.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 9 )
text = "Get all the concentrated air bubbles 
that you can with a single life. (Soon)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MisionSelect"]
margin_left = 9.0
margin_top = 138.0
margin_right = 191.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 9 )
text = "Get all the concentrated air bubbles 
that you can with a limit time. (Soon)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseDialog" type="Button" parent="MisionSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 207.985
margin_top = 65.2171
margin_right = 37.9846
margin_bottom = -65.7829
focus_mode = 0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.882353, 0.196078, 0.196078, 1 )
enabled_focus_mode = 0
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Menu/VBoxContainer/1Player" to="." method="_on_1Player_button_up"]
[connection signal="button_up" from="Menu/VBoxContainer/2Player" to="." method="_on_2Player_button_up"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MisionSelect/Mission" to="." method="_on_Mission_pressed"]
[connection signal="pressed" from="MisionSelect/CloseDialog" to="." method="_on_CloseDialog_pressed"]
